[package]
name = "density_gradient"
version = "0.1.0"
authors = ["Daniel <danielmail7@gmail.com>"]
edition = "2018"

[lib]
name = "exp_chemint_rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
mimalloc = { version = "0.1.25", default-features = false } # for maximum performance
#jemallocator = "0.3.2" # for maximum performance

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.


[profile.release] # for maximum performance
lto = "fat"
codegen-units = 1
panic = "abort"



